# external-libraries/openapi/apis/VideoApi.ts
@@ -15,18 +15,24 @@
 
 import * as runtime from '../runtime';
 import type {
-  VideoSourceType,
-  VideoType,
+  ErrorResponse,
+  VideoRequest,
+  VideoResponse,
+  VideoSourceRequest,
 } from '../models';
 import {
-    VideoSourceTypeFromJSON,
-    VideoSourceTypeToJSON,
-    VideoTypeFromJSON,
-    VideoTypeToJSON,
+    ErrorResponseFromJSON,
+    ErrorResponseToJSON,
+    VideoRequestFromJSON,
+    VideoRequestToJSON,
+    VideoResponseFromJSON,
+    VideoResponseToJSON,
+    VideoSourceRequestFromJSON,
+    VideoSourceRequestToJSON,
 } from '../models';
 
 export interface CreateVideoRequest {
-    body: VideoType;
+    body: VideoRequest;
 }
 
 export interface GetVideoRequest {
@@ -35,7 +41,7 @@ export interface GetVideoRequest {
 
 export interface ModifyVideoRequest {
     id: string;
-    body: VideoSourceType;
+    body: VideoSourceRequest;
 }
 
 /**
@@ -47,7 +53,7 @@ export class VideoApi extends runtime.BaseAPI {
      * Create video
      * Create video
      */
-    async createVideoRaw(requestParameters: CreateVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<VideoType>> {
+    async createVideoRaw(requestParameters: CreateVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<VideoResponse>> {
         if (requestParameters.body === null || requestParameters.body === undefined) {
             throw new runtime.RequiredError('body','Required parameter requestParameters.body was null or undefined when calling createVideo.');
         }
@@ -63,17 +69,17 @@ export class VideoApi extends runtime.BaseAPI {
             method: 'POST',
             headers: headerParameters,
             query: queryParameters,
-            body: VideoTypeToJSON(requestParameters.body),
+            body: VideoRequestToJSON(requestParameters.body),
         }, initOverrides);
 
-        return new runtime.JSONApiResponse(response, (jsonValue) => VideoTypeFromJSON(jsonValue));
+        return new runtime.JSONApiResponse(response, (jsonValue) => VideoResponseFromJSON(jsonValue));
     }
 
     /**
      * Create video
      * Create video
      */
-    async createVideo(requestParameters: CreateVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<VideoType> {
+    async createVideo(requestParameters: CreateVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<VideoResponse> {
         const response = await this.createVideoRaw(requestParameters, initOverrides);
         return await response.value();
     }
@@ -82,7 +88,7 @@ export class VideoApi extends runtime.BaseAPI {
      * Get existing video by ObjectId.
      * Get an existing video
      */
-    async getVideoRaw(requestParameters: GetVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<VideoType>> {
+    async getVideoRaw(requestParameters: GetVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<VideoResponse>> {
         if (requestParameters.id === null || requestParameters.id === undefined) {
             throw new runtime.RequiredError('id','Required parameter requestParameters.id was null or undefined when calling getVideo.');
         }
@@ -98,14 +104,14 @@ export class VideoApi extends runtime.BaseAPI {
             query: queryParameters,
         }, initOverrides);
 
-        return new runtime.JSONApiResponse(response, (jsonValue) => VideoTypeFromJSON(jsonValue));
+        return new runtime.JSONApiResponse(response, (jsonValue) => VideoResponseFromJSON(jsonValue));
     }
 
     /**
      * Get existing video by ObjectId.
      * Get an existing video
      */
-    async getVideo(requestParameters: GetVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<VideoType> {
+    async getVideo(requestParameters: GetVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<VideoResponse> {
         const response = await this.getVideoRaw(requestParameters, initOverrides);
         return await response.value();
     }
@@ -114,7 +120,7 @@ export class VideoApi extends runtime.BaseAPI {
      * Modify \'src\' from video.
      * Modify an existing video
      */
-    async modifyVideoRaw(requestParameters: ModifyVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<VideoType>> {
+    async modifyVideoRaw(requestParameters: ModifyVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<VideoResponse>> {
         if (requestParameters.id === null || requestParameters.id === undefined) {
             throw new runtime.RequiredError('id','Required parameter requestParameters.id was null or undefined when calling modifyVideo.');
         }
@@ -134,17 +140,17 @@ export class VideoApi extends runtime.BaseAPI {
             method: 'PATCH',
             headers: headerParameters,
             query: queryParameters,
-            body: VideoSourceTypeToJSON(requestParameters.body),
+            body: VideoSourceRequestToJSON(requestParameters.body),
         }, initOverrides);
 
-        return new runtime.JSONApiResponse(response, (jsonValue) => VideoTypeFromJSON(jsonValue));
+        return new runtime.JSONApiResponse(response, (jsonValue) => VideoResponseFromJSON(jsonValue));
     }
 
     /**
      * Modify \'src\' from video.
      * Modify an existing video
      */
-    async modifyVideo(requestParameters: ModifyVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<VideoType> {
+    async modifyVideo(requestParameters: ModifyVideoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<VideoResponse> {
         const response = await this.modifyVideoRaw(requestParameters, initOverrides);
         return await response.value();
     }
