# external-libraries/openapi/models/VideoResponse.ts
@@ -1,0 +1,84 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * School API
+ * School API
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: orscarsilla@outlook.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface VideoResponse
+ */
+export interface VideoResponse {
+    /**
+     * 
+     * @type {string}
+     * @memberof VideoResponse
+     */
+    id: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof VideoResponse
+     */
+    ref: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof VideoResponse
+     */
+    src: string;
+}
+
+/**
+ * Check if a given object implements the VideoResponse interface.
+ */
+export function instanceOfVideoResponse(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "id" in value;
+    isInstance = isInstance && "ref" in value;
+    isInstance = isInstance && "src" in value;
+
+    return isInstance;
+}
+
+export function VideoResponseFromJSON(json: any): VideoResponse {
+    return VideoResponseFromJSONTyped(json, false);
+}
+
+export function VideoResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): VideoResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'id': json['_id'],
+        'ref': json['ref'],
+        'src': json['src'],
+    };
+}
+
+export function VideoResponseToJSON(value?: VideoResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        '_id': value.id,
+        'ref': value.ref,
+        'src': value.src,
+    };
+}
+
