# src/infrastructure/repository/mongo/collections/videos.collection.ts
@@ -1,0 +1,9 @@
+import { VideoRequest } from "../../../../../external-libraries/openapi";
+
+export class VideosCollection {
+  async save(videoRequest: VideoRequest) {
+    return await global.database.mongo
+      .collection("videos")
+      .insertOne(videoRequest);
+  }
+}
